--- a/homework.rmd
+++ b/homework.rmd
@@ -17,7 +17,7 @@ bibliography: bib.bibtex
 biblio-style: authoryear
 link-citations: true
 urlcolor: blue
-abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSO genes was used with raxml to build a phylogenetic tree. Result suggest a monphyly of Polyopisthocotylean (Monogenea) and Trematoda closely related to the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple livestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if life-style (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. Close relationship between Polyopisthocotylean (Monogenea) and Trematoda could explain similar feeding habits between those two taxa.
+abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSO genes was used with raxml to build a phylogenetic tree. Result suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda closely related to the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple livestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if life-style (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. Close relationship between Polyopisthocotylean (Monogenea) and Trematoda could explain similar feeding habits between those two taxa.
 ---
 ```{r global_options, include=FALSE}
 # this tells r to fix images on positions were I want them and don't let LaTeX shuffle them around like crazy
@@ -27,11 +27,11 @@ library("tidyverse")
 
 # Introduction
 
-Neodermata are obligate parasitic plathelminthes, subsuming three groups of flatworms including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most Trematodes and Cestodes are endoparasitic with a complex life cycle, while Monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The Monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two subclasses: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors, only hooks, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
+Neodermata are obligate parasitic plathelminthes, subsuming three groups of flatworms including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most Trematodes and Cestodes are endoparasitic with a complex life cycle, while Monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The Monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two groups: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors, only hooks, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
 
 The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the Monogeneans has to be resolved [@park2007].  At the moment there are multiple competing hypotheses about the correct evolutionary history of the neodermata [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. 
 
-A special species in our group was the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was found multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the subclass of Monopisthocotyleans.
+A special species in our group was the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was found multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
 
 
 The aim of this study is to add findings to the controversely discussed phylogeny of the neodermata with a special focus on the positioning of the monogeneans. We want to accomplishe this by producing genome assemblies for more monogenean species ((*D. coeliaca* and *Leptocotyle minor*) and resolving the phylogeny with the addition of openly accessible NCBI data of further neodermata.
